--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
     {% endif %}
   </p>
 
-  <div class="col-box-title myFont css2dcc4b9955748">Recent Article</div>
+  <div class="col-box-title myFont css2dcc4b9955748">Recent Articles</div>
   <ul class="post-list">
     <li>Theme By <a href="http://zhaoyuxiang.cn">Clark Zhao</a></li>
     {% for post in site.posts limit:5 %}
