--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@
     {% endif %}
   </p>
 
-  <div class="col-box-title myFont">Recent Article</div>
+  <div class="col-box-title myFont">Recent Articles</div>
   <ul class="post-list">
     {% for post in site.posts limit:5 %}
       <li><a class="post-link" href="{{ post.url | prepend: site.baseurl }}" target="_blank">{{ post.title }}</a></li>
